--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,9 @@ html {
   margin: 0;
   width: 100%;
   height: 100%;
-  background-color: "#FFFFFF";
+  background-color: #FFFFFF;
 }
+
 
 .chivo {
   font-family: "Chivo", serif;
