--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,12 @@ html {
   padding: 0;
   margin: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #FFFFFF;
   background-image: url("../src/assets/background.jpg");
   background-repeat: repeat;
 }
+
 
 
 
